RESOLVED FIXED95934
[Qt] Various small Windows / MSVC build fixes
https://bugs.webkit.org/show_bug.cgi?id=95934
Summary [Qt] Various small Windows / MSVC build fixes
Simon Hausmann
Reported 2012-09-05 22:19:29 PDT
[Qt] Various small Windows / MSVC build fixes
Attachments
Patch (6.47 KB, patch)
2012-09-05 22:26 PDT, Simon Hausmann
kenneth: review+
Simon Hausmann
Comment 1 2012-09-05 22:26:23 PDT
Simon Hausmann
Comment 2 2012-09-06 03:59:59 PDT
Comment on attachment 162420 [details] Patch Landing manually so that I can rebase :)
Simon Hausmann
Comment 3 2012-09-06 04:02:04 PDT
Note You need to log in before you can comment on or make changes to this bug.