Source/WebKit2/WebProcess/qt/WebProcessMainQt.cpp
@@ -54,7 +54,7 @@
 #include <QDebug>
 #endif
 
-#if !USE(UNIX_DOMAIN_SOCKETS)
+#if OS(DARWIN) && !USE(UNIX_DOMAIN_SOCKETS)
 #include <servers/bootstrap.h>
 
 extern "C" kern_return_t bootstrap_look_up2(mach_port_t, const name_t, mach_port_t*, pid_t, uint64_t);
@@ -145,8 +145,6 @@ static void initializeProxy()
 Q_DECL_EXPORT int WebProcessMainQt(QGuiApplication* app)
 {
     initializeProxy();
-
-    srandom(time(0));
 
     JSC::initializeThreading();
     WTF::initializeMainThread();
